<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="180dp"
                android:text="@string/tv_select_area" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/domain_arrays"
                android:prompt="@string/domain_prompt"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_object_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="180dp"
                android:text="@string/tv_object_name" />

            <EditText
                android:id="@+id/editText_object_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_hint_object_name"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="180dp"
                android:text="@string/tv_address" />

            <EditText
                android:id="@+id/editText_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_hint_address"
                android:inputType="textPersonName"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="180dp"
                android:text="@string/tv_full_name" />

            <EditText
                android:id="@+id/editText_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_hint_full_name"
                android:inputType="textPersonName"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="180dp"
                android:text="@string/tv_temperature" />

            <EditText
                android:id="@+id/editText_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_hint_temperature"
                android:inputType="textPersonName"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="180dp"
                android:text="@string/tv_humidity" />

            <EditText
                android:id="@+id/editText_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_hint_humidity"
                android:inputType="textPersonName"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="180dp"
                android:text="@string/tv_pressure" />

            <EditText
                android:id="@+id/editText_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_hint_pressure"
                android:inputType="textPersonName"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_report_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="180dp"
                android:text="@string/tv_report_number" />

            <EditText
                android:id="@+id/editText_report_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_hint_report_number"
                android:inputType="textPersonName"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_previous" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_next" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>